syntax = "proto3";

package api.car;

import "google/api/annotations.proto";

option go_package = "car/api/car;car";
option java_multiple_files = true;
option java_package = "api.car";

service Car {
	rpc CreateCar (CreateCarRequest) returns (CreateCarReply);
	rpc UpdateCar (UpdateCarRequest) returns (UpdateCarReply);
	rpc DeleteCar (DeleteCarRequest) returns (DeleteCarReply);
	rpc GetCar (GetCarRequest) returns (GetCarReply);
	rpc ListCar (ListCarRequest) returns (ListCarReply);
	rpc SayHello (HelloRequest) returns (HelloReply) {
		option (google.api.http) = {
			get: "/car/helloworld/{name}"
		};
	}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

message CreateCarRequest {}
message CreateCarReply {}

message UpdateCarRequest {}
message UpdateCarReply {}

message DeleteCarRequest {}
message DeleteCarReply {}

message GetCarRequest {}
message GetCarReply {}

message ListCarRequest {}
message ListCarReply {}